plkijd